--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,38 @@
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* General styles */
 body {
-    /* Testing Font style */
-    font-family: "Architects Daughter", cursive;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* General project styls */
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: #010463;
+}
+
+/* Header */
+header {
+    background-color: #4484ce;
+}
+
+/* Main Content */
+main {
+    background-color: #d9d9d9;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+}
+
+/* Footer */
+footer {
+    background-color: #f9cf00;
 }
