--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,15 +32,14 @@ h1 {
 header {
     background-color: #d9d9d9;
     padding: 0.5rem 0.5rem;
-    display: flex;
-    align-items: baseline;
+    /* display: flex; */
     position: fixed;
     z-index: 99;
     width: 100%;
 }
 
 header a {
-    text-decoration: none;
+    text-decoration: none; 
 }
 
 #logo-image-name-container {
