--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,10 +36,12 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
+    box-shadow: 0 2px 2px #010463;
 }
 
 header a {
     text-decoration: none; 
+    color: inherit;
 }
 
 #logo-image-name-container {
