Add margin topto main element so it appears under fixed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,6 @@ header a {
 
 #logo-image-name-container {
     display: flex;
-    margin-bottom: 1em;
 }
 
 #logo-image-container img {
@@ -104,6 +103,7 @@ main {
     background-color: #4484ce;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 60.5px;
 }
 
 /* Footer */
