--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,10 @@ nav {
     font-size: 2rem;
 }
 
+.fa-solid {
+    color: #4484ce;
+}
+
 /* Main Content */
 main {
     background-color: #4484ce;
