--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,17 @@ nav {
 
 /* Main Content */
 main {
-    background-color: #4484ce;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 60.5px;
+}
+
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/asian-boy-library-room-school.jpg") no-repeat center center/cover;
+    background-position: 85%;
 }
 
 /* Footer */
