--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,34 @@ main {
     text-align: center;
 }
 
+div.section-title-container {
+    padding: 34px 20px;
+    margin: 0 -12px;
+    background-color: #d9d9d9;
+}
+
+h2.nested {
+    display: flex;
+}
+
+h2.nested::before {
+    content: '';
+    width: 20px;
+    height: 16px;
+    border-bottom: solid #010463 2px;
+    min-width: 94px;
+    margin-right: 20px;
+}
+
+h2.nested::after {
+    content: '';
+    width: 40px;
+    height: 16px;
+    border-bottom: solid #010463 2px;
+    min-width: 94px;
+    margin-left: 20px;
+}
+
 /* Footer */
 #social-networks {
     background-color: #d9d9d9;
