--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     color: #010463;
 }
 
-h1, h2 {
+h1, h2, h5{
     font-family: "Architects Daughter", cursive;
     font-weight: 200;
     font-style: normal;
@@ -191,7 +191,15 @@ section.image-description-side {
     width: 100%;
     height: auto;
     object-fit: cover;
-    padding-right: 30px;
+    /* border-radius: 30px; */
+}
+
+.padding-right {
+    padding-right: 20px;
+}
+
+.padding-left {
+    padding-left: 20px;
 }
 
 .reasons-text {
