--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     font-weight: 400;
     font-style: normal;
     color: darkslategray;
+    line-height: 1.5rem;
 }
 
 h1, h2, h5{
@@ -114,7 +115,7 @@ main {
 #hero {
     height: 600px;
     width: 100%; 
-    background: url("../images/asian-boy-library-room-school.jpg") no-repeat center center/cover;
+    background: url("../images/asian-boy-library-room-school.jpeg") no-repeat center center/cover;
     background-position: 85%; 
     position: relative;
 }
@@ -139,7 +140,7 @@ main {
 
 div.section-title-container {
     padding: 30px 15px;
-    background-color: rgb(243, 219, 130);
+    background-color: #ffffff;
     margin-left: 0;
     margin-right: 0;
 }
@@ -182,7 +183,7 @@ p.description {
     padding: 10px 10px;
 }
 
-section.image-description-side {
+/* section.image-description-side {
     display: flex;
     margin-top: 20px;
 }
@@ -191,7 +192,6 @@ section.image-description-side {
     width: 100%;
     height: auto;
     object-fit: cover;
-    /* border-radius: 30px; */
 }
 
 .padding-right {
@@ -205,8 +205,72 @@ section.image-description-side {
 .reasons-text {
     font-size: smaller;
     margin-top: 15px;
+} 
+*/
+
+section#reasons-container {
+    display: flex;
+    margin-top: 15px;
 }
 
+div#section-container-inner {
+    display: flex;
+}
+
+div.reasons-box {
+    display: flex;
+    gap: 0px 0px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
+    padding: 0px;
+    flex-direction: column;
+}
+
+div.reasons-colour-box {
+    padding: 20px 20px 9px;
+    border-radius: 15px 15px 0 0;
+}
+
+div#reasons-colour-box-care {
+    background-color: rgb(255, 197, 127);
+}
+
+div.icon-box {
+    width: 76px;
+    height: 76px;
+    background-color: #ffffff;
+    padding: 13px;
+    border-radius: 50%;
+    font-size: 40px;
+    text-align: center;
+}
+
+i.fa-solid {
+    color: #010463;
+}
+
+div.icon-box-content {
+    margin-block-start: .5rem;
+    margin-block-end: 1rem;
+    line-height: 1.2;
+    color: #ffffff;
+}
+
+div.content-box-inner {
+    padding-right: 10px;
+}
+
+div.content-box {
+    padding: 0 10px;
+}
+
+div.content-box-inner p {
+    margin: 14.4px 0px;
+}
+
+
+
+/* Gallery link */
 div#link-to-gallery {
     background-color: #4484ce; 
     padding: 20px;
