--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,14 @@ div.picholder {
     margin: 1rem 0;
 }
 
+div.inner-picholder {
+    display: flex;
+    gap: 0px 0px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
+    padding: 0px;
+}
+
 .section-image {
     width: 100%;
     height: auto;
