--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,11 @@ img.courses-image {
     border-radius: 15px 15px 0 0;
 }
 
+img.courses-day-icon {
+    height: 25px;
+    width: 25px;
+}
+
 /* Need fixing */
 div#content-box-inner-courses h4 {
     font-size: x-large;
