Add margin left 20px to courses icon content.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,10 @@ div.courses-day-icon-container {
     padding-top: 15px;
 }
 
+div.courses-day-icon-content-container-inner p {
+    margin-left: 20px;
+}
+
 
 
 /* Circle background image */
