--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,7 @@ div#link-to-gallery {
     padding: 20px;
     margin-top: 15px;
     border-radius: 15px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
 }
 
 div#link-to-gallery a {
