--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,6 +380,7 @@ div#link-to-gallery {
     background-color: #4484ce; 
     padding: 20px;
     margin-top: 15px;
+    margin-bottom: 30px;
     border-radius: 15px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
 }
