Add div to wrap testimonials content to apply flex property.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,6 +402,13 @@ div#testimonials {
     margin-top: 15px;
 }
 
+div#testimonials-content-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    text-align: center;
+}
+
 p.testimonials-text {
     font-size: smaller;
     margin-top: 10px;
