--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,18 @@ header a {
     height: 40px;   
     width: 40px;
     margin-right: 5px;
-}   
+}  
+
+div#menu-container {
+    border: solid 1px rgba(0, 0, 0, .15);
+    padding: 5px;
+    border-radius: 5px;
+    line-height: 0.5;
+}
+
+div#menu-container i {
+    font-size: 1.5rem;
+}
 
 #menu {
     font-size: 110%;
