--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
-    box-shadow: 0 2px 2px #010463;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
     justify-content: space-between;
     align-items: center;
 }
