--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@ main {
     background: url("../images/asian-boy-library-room-school.jpeg") no-repeat center center/cover;
     background-position: 85%; 
     position: relative;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
 }
 
 #cover-text {
@@ -384,6 +385,7 @@ div#circular-cover-bg {
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
 }
 
 /* Gallery link */
