Add max width 75% to reasons container for screen 768px and lager.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,9 +496,18 @@ p.testimonials-text {
     }
 
     /* Reasons */
+
+    section#reasons-container {
+        max-width: 75%;
+        margin: auto;
+    }
     div.wrap-two {
         display: flex;
         flex-direction: row;
+    }
+
+    div#inverted-pyramid {
+        
     }
 
 }
