--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -565,3 +565,11 @@ p.testimonials-text {
     }
     
 }
+
+/* media query: very large screen */
+@media  screen and (min-width: 1200px) {
+    div.section-title-container {
+        max-width: 75%;
+        margin: auto;
+    }
+}
