--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,6 +542,26 @@ p.testimonials-text {
     }
 
     /* Main content */
+    div.inner-picholder {
+        border-radius: 15px 0 0 15px;
+    }
+
+    img.section-image {
+        border-radius: 15px 0 0 15px;
+    }
+
+    p.description {
+        padding: 10px 40px;
+        font-size: large;
+        box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+        margin-top: 15px;
+        margin-bottom: 17px;
+        border-radius: 0 15px 15px 0;
+        display: grid;
+        align-items: center;
+        background-color:#d9d9d9;
+        color: #010463;
+    }
     div.section-pic-description {
         display: flex;
     }
@@ -568,6 +588,7 @@ p.testimonials-text {
 
 /* media query: very large screen */
 @media  screen and (min-width: 1200px) {
+
     div.section-title-container {
         max-width: 75%;
         margin: auto;
