--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ main {
 #hero {
     height: 600px;
     width: 100%; 
-    background: url("../images/asian-boy-library-room-school.jpeg") no-repeat center center/cover;
+    background: url(../images/index/asian-boy-library-room-school.jpeg) no-repeat center center/cover;
     background-position: 85%; 
     position: relative;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
@@ -357,7 +357,7 @@ div#thinking-kid-image {
 }
 
 div#circular-cover-bg {
-    background: url(../images/little-asian-girl-having-paper-pencil-hands-looking-up-writer-waiting-muse-isolated-green-background.jpg) no-repeat top center / cover;
+    background: url(../images/index/girl-blue-dress.jpg) no-repeat top center / cover;
     height: 90vw;
     width: 90vh;
     margin-top: 30px;
