--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,6 +413,24 @@ p.testimonials-text {
     margin-top: 10px;
 }
 
+/* Gallery page */
+div#photos ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div#photos li {
+    height: 40vh;
+    flex-grow: 1;
+}
+
+div#photos img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+}
+
 /* Footer */
 #social-networks {
     background-color: #d9d9d9;
