--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,6 +424,10 @@ div#photos li {
     flex-grow: 1;
 }
 
+div#photos li:last-child {
+    flex-grow: 10;
+}
+
 div#photos img {
     max-height: 100%;
     min-width: 100%;
@@ -445,6 +449,37 @@ div#photos img {
     font-size: 160%;
     padding: 5%;
     color:#4484ce
+}
+
+/* Devices with screen taller than wide */
+@media (max-aspect-ratio: 1/1) {
+    div#photos li {
+        height: 30vh;
+    }
+}
+
+/* Short screens and landscape */
+@media (max-aspect-ratio: 1/1) {
+    div#photos li {
+        height: 80vh;
+    }
+}
+
+/* Smaller screens in portrait */
+@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
+    div#photos ul {
+        flex-direction: row;
+    }
+
+    div#photos li {
+        height: auto;
+        width: 100%;
+    }
+    div#photos img {
+        width: 100%;
+        max-height: 75vh;
+        min-width: 0;
+    }
 }
 
 /* media query: larger mobile phone (347px and up) */
