Add styling to Gallery for mobile phones.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,25 +414,13 @@ p.testimonials-text {
 }
 
 /* Gallery page */
-div#photos ul {
-    display: flex;
-    flex-wrap: wrap;
+#photos img {
+    width: 100%;
+    line-height: 1em;
 }
 
-div#photos li {
-    height: 40vh;
-    flex-grow: 1;
-}
-
-div#photos li:last-child {
-    flex-grow: 10;
-}
-
-div#photos img {
-    max-height: 100%;
-    min-width: 100%;
-    object-fit: cover;
-    vertical-align: bottom;
+#photos {
+    line-height: 0;
 }
 
 /* Footer */
@@ -449,37 +437,6 @@ div#photos img {
     font-size: 160%;
     padding: 5%;
     color:#4484ce
-}
-
-/* Devices with screen taller than wide */
-@media (max-aspect-ratio: 1/1) {
-    div#photos li {
-        height: 30vh;
-    }
-}
-
-/* Short screens and landscape */
-@media (max-aspect-ratio: 1/1) {
-    div#photos li {
-        height: 80vh;
-    }
-}
-
-/* Smaller screens in portrait */
-@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
-    div#photos ul {
-        flex-direction: row;
-    }
-
-    div#photos li {
-        height: auto;
-        width: 100%;
-    }
-    div#photos img {
-        width: 100%;
-        max-height: 75vh;
-        min-width: 0;
-    }
 }
 
 /* media query: larger mobile phone (347px and up) */
