--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,9 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 60.5px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -425,14 +428,74 @@ p.testimonials-text {
 
 /* Contact page */
 
-
-/* #enquiry {
-    background-image: url(../images/contact/boy-learn-online.jpg) ;
+#enquiry {
+    background-image: url(../images/contact/boy-learn-online.jpg);
     background-size: cover;
     background-position: 75%;
     padding: 20px 10% 0 10%;
-    flex-grow: 1;
-} */
+    flex-grow: 1; 
+} 
+
+form#enquiry-form>h2 {
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+
+form#enquiry-form>h2 i {
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+div#salutation {
+    margin-bottom: 5px;
+}
+ 
+#enquiry-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.input-field {
+    background-color: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 5px;
+    padding: 0 5px;
+}
+
+#message {
+    color: rgb(18, 32, 32);
+    width: 100%;
+    height: auto;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 5px;
+    padding: 0 5px;
+}
+
+.send-button {
+    border-radius: 5px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #4484ce;
+    color:#ffffff;
+    font-family: "Shadows Into Light", cursive;
+    font-weight: 600;
+    font-style: normal;
+    border: none;
+}
+
 
 /* Footer */
 #social-networks {
