--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,13 +454,14 @@ div#salutation {
     color: #ffffff;
     background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
+    border-radius: 5px;
 }
 
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    margin-bottom: 20px;
+    margin: 5px 0 20px;
 }
 
 .input-field {
@@ -494,6 +495,8 @@ div#salutation {
     font-weight: 600;
     font-style: normal;
     border: none;
+    /* box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5), inset 0px 0px 2px rgba(154, 147, 113, 0.95); */
+    box-shadow: 5px 5px 5px #000;
 }
 
 
@@ -628,7 +631,22 @@ div#salutation {
     #photos {
         column-count: 3;
     }
+
+    /* Contact page */
+    #enquiry {
+    background-position: center;
+    position: relative;
+    }
+
+    #enquiry-form {
+        max-width: 400px;
+        max-height: 800px;
+        position: absolute;
+        left: 5%;
+        top: 50px
+    }
 }
+
 
 /* media query:larger devices (laptops and desktops, 992px and larger) */
 @media  screen and (min-width: 992px) {
@@ -696,5 +714,13 @@ div#salutation {
     div.section-title-container {
         max-width: 75%;
         margin: auto;
+    }
+
+    #enquiry-form {
+        max-width: 400px;
+        max-height: 800px;
+        position: absolute;
+        left: 5%;
+        top: 50px
     }
 }
