--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,7 +496,6 @@ div#salutation {
     font-weight: 600;
     font-style: normal;
     border: none;
-    /* box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5), inset 0px 0px 2px rgba(154, 147, 113, 0.95); */
     box-shadow: 5px 5px 5px #000;
 }
 
@@ -665,6 +664,20 @@ div#salutation {
         position: absolute;
         left: 5%;
         top: 50px
+    }
+
+    .input-field:hover {
+        border-color:#4484ce;
+    }
+
+    #message:hover {
+        border: solid 1px #4484ce;
+    }
+
+    .send-button:hover {
+        background-color: #ffffff;
+        color: #4484ce;
+        border: solid 1px #4484ce;
     }
 
     #map-contact-wrapper {
