--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,7 +452,7 @@ div#salutation {
  
 #enquiry-form {
     color: #ffffff;
-    background-color: rgba(60, 60, 60, 0.6);
+    background-color: rgba(60, 60, 60, 0.6); 
     padding: 30px;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -466,12 +466,12 @@ div#salutation {
 }
 
 .input-field {
-    background-color: transparent;
+    background-color:#ffffff;
     color: #fafafa;
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
-    border: 1px solid #fafafa;
+    border: 1px solid #ffffff;
     border-radius: 5px;
     padding: 0 5px;
 }
