--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,6 +518,17 @@ div#salutation {
     margin-bottom: 14.4px;
 }
 
+/* Courses detail page */
+#coming-soon {
+    max-width: 100%;
+    height: 100vh;
+    background-color: #4484ce;
+    color: #ffffff;
+    font-size: xx-large;
+    text-align: center;
+    padding-top: 300px;
+}
+
 
 /* Footer */
 #social-networks {
