--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,10 +523,13 @@ div#salutation {
     max-width: 100%;
     height: 100vh;
     background-color: #4484ce;
-    color: #ffffff;
     font-size: xx-large;
     text-align: center;
     padding-top: 300px;
+}
+
+.white {
+    color: #ffffff;
 }
 
 
