--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,7 +467,7 @@ div#salutation {
 
 .input-field {
     background-color:#ffffff;
-    color: #fafafa;
+    color: rgb(18, 32, 32);
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
@@ -525,7 +525,7 @@ div#salutation {
     background-color: #4484ce;
     font-size: xx-large;
     text-align: center;
-    padding-top: 300px;
+    padding: 300px 20px 0 20px;
 }
 
 .white {
