--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,6 +532,22 @@ div#salutation {
     color: #ffffff;
 }
 
+#back-to-home {
+    background-color: #010463;
+    border-radius: 5px;
+    margin: 60px;
+    padding: 10px 5px;
+}
+
+#back-to-home a {
+    text-decoration: none;
+}
+
+#back-to-home h5 {
+    color: #ffffff;
+    font-size: small;
+}
+
 /* Footer */
 #social-networks {
     background-color: #d9d9d9;
