Remove unused id and change class name to be more meaningfull

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ div.picholder {
     margin: 1rem 0;
 }
 
-div.inner-picholder {
+div.picholder-inner {
     display: flex;
     gap: 0px 0px;
     border-radius: 15px;
@@ -225,8 +225,9 @@ div.section-container-inner {
     display: flex;
     flex-direction: column;
 }
+/* Reasons */
 
-div.reasons-box {
+div.reasons-courses-box {
     display: flex;
     gap: 0px 0px;
     border-radius: 15px;
@@ -306,7 +307,7 @@ img.courses-image {
     border-radius: 15px 15px 0 0;
 }
 
-img.courses-day-icon {
+img.courses-icon {
     height: 25px;
     width: 25px;
 }
@@ -670,7 +671,7 @@ div#salutation {
         flex-direction: row;
     }
 
-    div.reasons-box {
+    div.reasons-courses-box {
         margin-right: 15px;
         margin-left: 15px;
     }
