--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ h1, h2, h4, h5{
     letter-spacing: 0.2rem;
 }
 
+.hidden-heading {
+    display: none;
+}
+
 /* Header */
 header {
     background-color: #d9d9d9;
