--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ main {
 #hero {
     height: 600px;
     width: 100%; 
-    background: url(../images/index/hero-image.jpeg) no-repeat center center/cover;
+    background: url(../images/index/hero-image.webp) no-repeat center center/cover;
     background-position: 85%; 
     position: relative;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
@@ -358,7 +358,7 @@ div#thinking-kid-image {
 }
 
 div#circular-cover-bg {
-    background: url(../images/index/girl-blue-dress.jpg) no-repeat top center / cover;
+    background: url(../images/index/girl-blue-dress.webp) no-repeat top center / cover;
     height: 90vw;
     width: 90vh;
     margin-top: 30px;
