--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,14 +330,11 @@ div.courses-day-icon-content-container-inner p {
     margin-left: 20px;
 }
 
-div.button-container-inner {
-    margin-bottom: 15px;
-}
-
-div.button-container-inner a {
+.find-out-button {
     display: block;
     width: 50%;
     margin: auto;
+    margin-bottom: 15px;
     background-color:#4484ce;
     padding: 5px 10px;
     border-radius: 10px;
@@ -346,7 +343,7 @@ div.button-container-inner a {
     text-decoration: none;
 }
 
-div.button-container-inner h5 {
+.find-out-button h5 {
     color: #ffffff;
 }
 
@@ -380,14 +377,11 @@ div#circular-cover-bg {
     margin-bottom: 30px;
     border-radius: 15px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .3);
-}
-
-a#link-to-gallery {
     text-decoration: none;
     text-align: center;
 }
 
-a#link-to-gallery h2, a#link-to-gallery h5 {
+#link-to-gallery h2, #link-to-gallery h5 {
     color: #ffffff;
 }
 
