Add hover effect to find out button and link to gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -765,6 +765,10 @@ div#salutation {
         width: 600px;
     }
 
+    .hover-effect:hover {
+        font-size: large;
+    }
+
     /* Gallery */
     #photos {
         column-count: 4;
