--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,18 +523,18 @@ div#salutation {
     color: #ffffff;
 }
 
-#back-to-home {
+.back-to-home {
+    display: block;
+    width: 15%;
+    margin: auto;
     background-color: #010463;
     border-radius: 5px;
-    margin: 60px;
+    margin-top: 60px;
     padding: 10px 5px;
-}
-
-#back-to-home a {
     text-decoration: none;
 }
 
-#back-to-home h5 {
+.back-to-home h5 {
     color: #ffffff;
     font-size: small;
 }
@@ -698,7 +698,7 @@ div#salutation {
         background-color: #ffffff;
         color: #4484ce;
         border: solid 1px #4484ce;
-    }
+    } 
 
     #map-contact-wrapper {
         padding: 50px 100px 50px 100px;
