--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,9 +496,16 @@ div#salutation {
     color: #ffffff;
 }
 
+div#map-container {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 30px;
+}
+
 #map {
-    margin-bottom: 10px;
     border: none;
+    width: 100%;
+    height: 100%;
 }
 
 #contact {
