Update gallery and contact image file to webp format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,7 @@ p.testimonials-text {
 /* Contact page */
 
 #enquiry {
-    background-image: url(../images/contact/boy-learn-online.jpg);
+    background-image: url(../images/contact/upset-boy.webp);
     background-size: cover;
     background-position: 75%;
     padding: 20px 10% 0 10%;
